--- a/templates/graphs.html
+++ b/templates/graphs.html
@@ -17,7 +17,7 @@
 
 
 		<div class="panel panel-default">
-			<div class="panel-heading">Absorbance Line plot</div>
+			<div class="panel-heading" id="panelHeadAbs"><h3>Absorbance Line plot</h3></div>
 			<div class="panel-body" id="lineplot">
 				<table style="width=100%;max-width:100%">		
 						{% for i in range(16) %}
@@ -35,7 +35,7 @@
 </div>
 		
 <div class="panel panel-default">
-        <div class="panel-heading" id="panelHeadHm">Select a wavelength to plot a heatmap</div>
+	<div class="panel-heading" id="panelHeadHm"><h3>Select a wavelength to plot a heatmap</h3></div>
 
 		<div class="panel-body" id="heatmap">
 				<form id="form-wavelength">
