edits on css and html

--- a/templates/updateDF.html
+++ b/templates/updateDF.html
@@ -1,4 +1,4 @@
-<table id="lineplots">		
+<table id="tablelineplots">		
         {% for i in range(16) %}
                 <tr>
                 {% for j in range(24) %}
