--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -1,11 +1,11 @@
-#lineplot, #heatmap{
-    width:100%;
+div#lineplot, div#heatmap{
+  width:100%;
 	height: 100%;
 	display:flex;
 	flex-direction: column;
 }
 
-table#lineplots
+table#tablelineplots
 {
     max-width:100%;
     table-layout:fixed;
