--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -1,36 +1,56 @@
 div#lineplot, div#heatmap{
-  width:100%;
-	height: 100%;
+	width:100%;
+	height: auto;
 	display:flex;
 	flex-direction: column;
 }
 
 table#tablelineplots
 {
-    max-width:100%;
-    table-layout:fixed;
+	border:0;
+table-layout:fixed;
     width:100%;
     border-spacing:0;
+    border-collapse:collapse;
     padding:0;
     margin:0;
+    position: relative;
+	height: auto;
+	padding-bottom:0;
 }
 
-#lineplots tr, td {
-    margin:-1px;
-    padding:-1px;
+#tablelineplots > tbody {
+	width:100%;
+	height:auto;
+	padding-bottom:0px;
 }
 
-table#corr-menu-tbl tr,td {
-    padding:2px;
+#tablelineplots tr>td {
+	padding:0px;
+	padding-bottom:0px;
+	height:auto;
 }
 
-table#corrcoeff td {
-    padding: 2px;
+#tablelineplots tr {
+    margin:0;
+    padding:0;
+	width:100%;
+    height:auto;
+	padding-bottom:0;
+
+}
+
+#corr-menu-tbl > tr {
+    padding:1px;
+}
+
+#corrcoeff > td {
+    padding: 1px;
     text-align: left;
     border-bottom: 1px solid #ddd;
 }
 
-table#corrcoeff th {
+#corrcoeff > th {
     text-align:center;
     border-bottom:1.5px solid #ddd;
 }
